Resolving Visual Bug on iPhone 11 / resolvendo bug visual no Iphone 11

--- a/style.css
+++ b/style.css
@@ -458,6 +458,7 @@ body.dark-theme {
     display: grid;
     row-gap: 1rem;
 }
+
 .home__social-link {
     background-color: var(--black-color-light);
     color: var(--white-color);
@@ -1178,6 +1179,16 @@ button i {
 
     .contact__social-description-2 {
         color: var(--title-color)
+    }
+
+    .home__social-link {
+        background-color: var(--black-color-light);
+        color: var(--white-color);
+        font-size: 1.25rem;
+        padding: 6px;
+        display: grid;
+        place-items: center;
+        transition: background-color .3s;
     }
 
     /* Dark Theme */
